--- a/css/components/sections/ds-form-fields.scss
+++ b/css/components/sections/ds-form-fields.scss
@@ -3,8 +3,6 @@
   src: url("/PancakeSwap-Project/css/font/pgf-qualta-bold.otf");
 }
 
-// font-family: "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-
 .form-fields {
   display: flex;
   flex-direction: column;
@@ -49,9 +47,7 @@
     }
 
     & .input-wrapper {
-      // border: 1px solid rgb(240, 248, 255);
       border-radius: 8px;
-      transition: border-color 0.2s ease 0s;
       display: inline-block;
 
       &__input {
@@ -62,13 +58,8 @@
         color: rgb(38, 35, 39);
         background: transparent;
         padding: 17px 18px;
-        // width: 114%;
         height: 100%;
         border-radius: 5px;
-
-        // display: block;
-        // transform: scale(0.875);
-        // transform-origin: left center;
       }
     }
     &-r .input-wrapper,
@@ -100,6 +91,11 @@
     &-l,
     &-c .button-wrapper {
       opacity: 0.6;
+      cursor: not-allowed;
+    }
+
+    &-r {
+      cursor: pointer;
     }
 
     & .button-wrapper {
@@ -110,11 +106,9 @@
       outline: 0px;
       color: rgb(255, 255, 255);
       background-color: rgb(54, 91, 234);
-      transition: color 0.3s ease 0s, background-color 0.3s ease 0s;
       font-weight: 600;
       font-size: 16px;
       line-height: 22px;
-      cursor: not-allowed;
       pointer-events: none;
       position: relative;
       z-index: 1;
@@ -130,74 +124,3 @@
     }
   }
 }
-
-// .form-fields .input-wrapper {
-//   border: 1px solid rgb(240, 248, 255);
-//   border-radius: 8px;
-//   transition: border-color 0.2s ease 0s;
-//   display: inline-block;
-
-//   &__input {
-//     margin: 0 auto;
-//     font-size: 16px;
-//     font-family: "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-//     text-overflow: ellipsis;
-//     color: rgb(38, 35, 39);
-//     background: transparent;
-//     padding: 17px 18px;
-//     width: 114%;
-//     height: 100%;
-//     border-radius: 3px;
-//     border: transparent;
-
-//     display: block;
-//     transform: scale(0.875);
-//     transform-origin: left center;
-//   }
-// }
-
-// .form-fields__content .button-wrapper {
-//   margin-top: 18px;
-//   padding: 15px 20px;
-//   border-radius: 12px;
-//   user-select: none;
-//   outline: 0px;
-//   color: rgb(255, 255, 255);
-//   background-color: rgb(54, 91, 234);
-//   transition: color 0.3s ease 0s, background-color 0.3s ease 0s;
-//   font-weight: 600;
-//   font-size: 16px;
-//   line-height: 22px;
-//   cursor: not-allowed;
-//   pointer-events: none;
-//   position: relative;
-//   z-index: 1;
-//   opacity: 0.6;
-// }
-
-// &__text {
-//   font-family: "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-//   transition: opacity 0.2s ease 0s;
-//   opacity: 1;
-//   border-color: #e2e8f0;
-//   overflow-wrap: break-word;
-// }
-
-// @media screen and (max-width: 1919px) {
-//  main .icons {
-//   }
-// }
-
-// @media screen and (max-width: 1365px) {
-//     main .icons {
-//   }
-// }
-// @media screen and (max-width: 767px) {
-//   main .icons {
-//   }
-// }
-
-// @media (max-width: 479px) {
-//   main .icons {
-//   }
-// }
