--- a/css/components/sections/ds-icons.css
+++ b/css/components/sections/ds-icons.css
@@ -42,6 +42,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
+  align-items: flex-start;
   gap: 1rem;
 }
 .icons__svg-content img,
@@ -60,7 +61,8 @@
   padding: 3px;
   box-shadow: 0 1px 3px rgba(46, 46, 46, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
-.icons__svg-content--light, .icons__svg-content--dark {
+.icons__svg-content--light,
+.icons__svg-content--dark {
   display: flex;
   justify-content: space-around;
   background-color: rgb(102, 97, 113);
@@ -78,16 +80,22 @@
   border-width: thick;
   box-shadow: 0 1px 3px rgba(46, 46, 46, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+.icons__svg .sun-alt,
+.icons__svg .moon-alt {
+  border-radius: 50%;
+  border-color: transparent;
+  border-style: solid;
+}
 .icons__svg-content--sns {
   background-color: rgb(39, 38, 44);
   border-radius: 35px;
-  padding: 7px;
+  padding: 5px;
   box-shadow: 0 1px 3px rgba(46, 46, 46, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 .icons__svg-content--other {
   background-color: rgb(226, 225, 227);
   border-radius: 35px;
-  padding: 7px;
+  padding: 5px;
   box-shadow: 0 1px 3px rgba(46, 46, 46, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
