--- a/css/components/sections/ds-icons.scss
+++ b/css/components/sections/ds-icons.scss
@@ -1,12 +1,3 @@
-// .column {
-//   flex: 33.33%;
-//   height: 200px;
-//   padding: 10px;
-//   margin: 5px;
-//   background-color: #fafafa;
-//   border: 1rem;
-//   text-align: center;
-// }
 @font-face {
   font-family: "Pgf Qualta";
   src: url("/PancakeSwap-Project/css/font/pgf-qualta-bold.otf");
@@ -54,6 +45,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+    align-items: flex-start;
     gap: 1rem;
 
     img {
@@ -92,37 +84,24 @@
     border-style: solid;
     border-width: thick;
     box-shadow: 0 1px 3px rgba(46, 46, 46, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+    &-alt {
+      border-radius: 50%;
+      border-color: transparent;
+      border-style: solid;
+    }
   }
   &-content--sns {
     background-color: rgb(39, 38, 44);
     border-radius: 35px;
-    padding: 7px;
+    padding: 5px;
     box-shadow: 0 1px 3px rgba(46, 46, 46, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
 
   &-content--other {
     background-color: rgb(226, 225, 227);
     border-radius: 35px;
-    padding: 7px;
+    padding: 5px;
     box-shadow: 0 1px 3px rgba(46, 46, 46, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
 }
-
-// @media screen and (max-width: 1919px) {
-//  main .icons {
-//   }
-// }
-
-// @media screen and (max-width: 1365px) {
-//     main .icons {
-//   }
-// }
-// @media screen and (max-width: 767px) {
-//   main .icons {
-//   }
-// }
-
-// @media (max-width: 479px) {
-//   main .icons {
-//   }
-// }
