--- a/css/components/index.css
+++ b/css/components/index.css
@@ -1,2 +1,4 @@
 @import url(./sections/ds-icons.css);
 @import url(./sections/ds-form-fields.css);
+@import url(./sections/ds-logos.css);
+@import url(./sections/ds-brandcolor.css);
