add/feature/sectionlogosectionbrandcolor

--- a/css/components/sections/ds-logos.css
+++ b/css/components/sections/ds-logos.css
@@ -1,7 +1,3 @@
-@font-face {
-  font-family: "Pgf Qualta";
-  src: url("/PancakeSwap-Project/css/font/pgf-qualta-bold.otf");
-}
 .logo {
   display: flex;
   flex-direction: column;
@@ -21,20 +17,24 @@
   font-size: 1.5rem;
   font-weight: 400;
   color: rgba(0, 0, 0, 0.85);
-  font-family: "Pgf Qualta";
   font-style: normal;
-  line-height: 1rem;
-}
-.logo__text :after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 8rem;
-  border-bottom: 2mm solid lightgrey;
+  text-decoration: underline;
+  text-decoration-color: lightgray;
+  text-decoration-thickness: 4px;
+  text-underline-offset: 8px;
 }
 
 .logo__svg .logo__svg-content .logo__svg-content--main {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo__svg .logo__svg-content .logo__svg-content--main img {
+  max-height: 100px;
+}
+.logo__svg .logo__svg-content .logo__svg-content--main svg {
+  max-height: 100px;
+}
+.logo__svg .logo__svg-content .logo__svg-content--main svg:last-child {
+  max-width: 500px;
 }/*# sourceMappingURL=ds-logos.css.map */
