--- a/css/components/sections/ds-brandcolor.scss
+++ b/css/components/sections/ds-brandcolor.scss
@@ -1,7 +1,3 @@
-@font-face {
-  font-family: "Pgf Qualta";
-  src: url("/PancakeSwap-Project/css/font/pgf-qualta-bold.otf");
-}
 
 .brandColor {
   display: flex;
@@ -24,19 +20,12 @@
   font-size: 1.5rem;
   font-weight: 400;
   color: rgba(0, 0, 0, 0.85);
-  font-family: "Pgf Qualta";
   font-style: normal;
-  line-height: 1rem;
-}
+  text-decoration: underline;
+  text-decoration-color:lightgray;
+  text-decoration-thickness: 4px;
+  text-underline-offset:8px
 
-.brandColor__text:after {
-  content: "";
-  position: absolute;
-  bottom: 10px;
-  left: 0;
-  width: 8rem;
-  border-bottom: 8px solid lightgrey;
-  padding: 4.5rem;
 }
 
 #color-1 {
