--- a/css/components/sections/ds-logos.scss
+++ b/css/components/sections/ds-logos.scss
@@ -1,7 +1,3 @@
-@font-face {
-  font-family: "Pgf Qualta";
-  src: url("/PancakeSwap-Project/css/font/pgf-qualta-bold.otf");
-}
 .logo {
   display: flex;
  flex-direction: column;
@@ -21,18 +17,12 @@
     font-size: 1.5rem;
     font-weight: 400;
     color: rgba(0, 0, 0, 0.85);
-    font-family: "Pgf Qualta";
     font-style: normal;
-    line-height: 1rem;
+    text-decoration: underline;
+    text-decoration-color:lightgray;
+    text-decoration-thickness: 4px;
+    text-underline-offset:8px
 
-    :after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 8rem;
-      border-bottom: 2mm solid lightgrey;
-    }
   }
   .logo__svg {
       // Classe per il contenitore SVG del logo
@@ -40,7 +30,19 @@
         // Classe per il contenuto SVG del logo
         .logo__svg-content--main {
          display: flex;
-         justify-content: space-evenly;
+         justify-content: space-between;
+         align-items: center;
+         img {
+          max-height: 100px;
+         }  
+         svg{
+          max-height:100px;
+          
+          &:last-child{
+            max-width: 500px;
+
+          }
+         }
           
             }
           }
