--- a/css/components/index.css
+++ b/css/components/index.css
@@ -10,4 +10,5 @@
 @import url(./shared/card-details.css);
 @import url(./shared/card-prizes.css);
 @import url(./shared/nft-card--lg.css);
-
+@import url(./shared/phishing-warning.css);
+@import url(./shared/carousel.css);
