--- a/css/components/sections/design-system-components.scss
+++ b/css/components/sections/design-system-components.scss
@@ -1,6 +1,10 @@
 .components {
-  padding: 10px;
-  width: 33%;
+  padding: 0 10px;
+  width: 100%;
+  min-height: 100vh;
+  max-height: 100vh;
+  height: 100%;
+  overflow: hidden;
   h2 {
     text-decoration: underline;
     text-underline-offset: 10px;
@@ -10,12 +14,31 @@
   &__content {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+    align-items: center;
+    justify-content: space-between;
+    gap: 15px 0;
   }
   &__description {
-    .components__text {
-      font-size: 16px;
-      margin-bottom: 15px;
+    &:nth-child(6) {
+      width: 175px;
     }
+    &--width {
+      width: 100%;
+    }
+    &--carousel {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .components__text {
+        margin: 0;
+      }
+    }
+  }
+  &__text {
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    text-align: center;
   }
 }
