--- a/css/components/shared/carousel.css
+++ b/css/components/shared/carousel.css
@@ -34,12 +34,14 @@
   margin-bottom: 10px;
   background: linear-gradient(349.27deg, rgb(255, 178, 55) -8.6%, rgb(255, 235, 55) 59.55%);
   -webkit-text-fill-color: transparent;
-  background-clip: text;
+  background-clip: unset;
   -webkit-background-clip: text;
+  width: fit-content;
 }
 .carousel__gradient-text--small {
   font-size: 19px;
   margin: 0;
+  padding: 0;
 }
 .carousel__links {
   display: flex;
