hotfix/section-logo-section-brand-color

--- a/css/components/sections/design-system-components.css
+++ b/css/components/sections/design-system-components.css
@@ -16,6 +16,4 @@
 .components__description .components__text {
   font-size: 16px;
   margin-bottom: 15px;
-}
-
-/*# sourceMappingURL=design-system-components.css.map */
+}/*# sourceMappingURL=design-system-components.css.map */
