--- a/css/components/shared/card-details.css
+++ b/css/components/shared/card-details.css
@@ -41,6 +41,4 @@
 .card-details__footer p {
   color: #7a6eaa;
   margin: 0;
-}
-
-/*# sourceMappingURL=card-details.css.map */
+}/*# sourceMappingURL=card-details.css.map */
