--- a/css/components/shared/card-prizes.css
+++ b/css/components/shared/card-prizes.css
@@ -124,6 +124,4 @@
 }
 .card-prizes__button svg {
   fill: white;
-}
-
-/*# sourceMappingURL=card-prizes.css.map */
+}/*# sourceMappingURL=card-prizes.css.map */
