--- a/css/components/shared/nft-card--lg.css
+++ b/css/components/shared/nft-card--lg.css
@@ -71,6 +71,4 @@
   color: #280d5f;
   font-weight: 600;
   font-size: 16px;
-}
-
-/*# sourceMappingURL=nft-card--lg.css.map */
+}/*# sourceMappingURL=nft-card--lg.css.map */
