--- a/css/components/shared/popup.css
+++ b/css/components/shared/popup.css
@@ -40,7 +40,9 @@
   display: flex;
 }
 .popup__checkbox .checkbox {
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   width: 24px;
   height: 24px;
   flex-shrink: 0;
@@ -91,6 +93,4 @@
   color: #bdc2c4;
   letter-spacing: 0.48px;
   cursor: not-allowed;
-}
-
-/*# sourceMappingURL=popup.css.map */
+}/*# sourceMappingURL=popup.css.map */
