--- a/css/components/sections/card-prizes-container.css
+++ b/css/components/sections/card-prizes-container.css
@@ -2,6 +2,4 @@
   display: flex;
   gap: 24px;
   max-width: 600px;
-}
-
-/*# sourceMappingURL=card-prizes-container.css.map */
+}/*# sourceMappingURL=card-prizes-container.css.map */
