--- a/css/components/sections/ds-brandcolor.css
+++ b/css/components/sections/ds-brandcolor.css
@@ -1,20 +1,28 @@
+.container {
+  display: flex;
+  flex-basis: 25%;
+  flex-wrap: wrap;
+  margin: 80px;
+}
+
 .brandColor {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  box-shadow: 0 1px 3px rgba(46, 46, 46, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   background-color: #8d60f0;
 }
 
 .brandColor__content {
   padding: 2rem;
   height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .brandColor__text {
   display: flex;
   position: relative;
+  margin-bottom: 20px;
   font-size: 1.5rem;
   font-weight: 400;
   color: rgba(0, 0, 0, 0.85);
@@ -26,8 +34,7 @@
 }
 
 #color-1 {
-  background: #3c1786;
-  color: white;
+  background: #784fd1;
 }
 
 #color-2 {
@@ -42,9 +49,20 @@
   background: #1fc7d4;
 }
 
-.card {
-  display: flex;
-  flex-direction: column;
+#color-5 {
+  background: #f0b90b;
+}
+
+#color-6 {
+  background: #633001;
+}
+
+#color-7 {
+  background: #0000ee;
+}
+
+#color-8 {
+  background: #ffb237;
 }
 
 .card__description {
@@ -68,20 +86,15 @@
 .card__color span {
   display: block;
   padding: 5px 0;
+  font-size: large;
 }
 
 .cardGroup {
   display: flex;
+  flex-direction: column;
   border: 3px solid black;
   border-radius: 4px;
   overflow: hidden;
-}
-
-.cardGroup__card {
-  flex: 1 1 0%;
-  border-radius: 0;
-}
-
-.cardGroup__card + .cardGroup__card {
-  border-left: 3px solid black;
+  width: 100%; /* Dimensione fissa per i cardGroup */
+  margin: 1px;
 }/*# sourceMappingURL=ds-brandcolor.css.map */
