--- a/css/components/sections/ds-logos.css
+++ b/css/components/sections/ds-logos.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   background-color: #8d60f0;
 }
 .logo__content {
@@ -10,7 +9,6 @@
   width: 100%;
   height: 100%;
 }
-
 .logo__text {
   display: flex;
   position: relative;
@@ -23,18 +21,33 @@
   text-decoration-thickness: 4px;
   text-underline-offset: 8px;
 }
-
-.logo__svg .logo__svg-content .logo__svg-content--main {
+.logo__svg-content--main {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
+  margin: 1rem;
 }
-.logo__svg .logo__svg-content .logo__svg-content--main img {
+.logo__svg-content--main img {
   max-height: 100px;
 }
-.logo__svg .logo__svg-content .logo__svg-content--main svg {
+.logo__svg-content--main img:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s ease;
+  background-color: #f5f5f5;
+  box-shadow: 11 11 15px rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  opacity: 0.9;
+}
+.logo__svg-content--main svg {
   max-height: 100px;
 }
-.logo__svg .logo__svg-content .logo__svg-content--main svg:last-child {
+.logo__svg-content--main svg:last-child {
   max-width: 500px;
+}
+.logo__svg-content--main svg:hover {
+  transform: scale(1.3);
+  transition: trasform 1s ease;
+  box-shadow: rgba(0, 0, 0, 0.3);
+  border: radius 1px;
+  opacity: 0.9;
 }/*# sourceMappingURL=ds-logos.css.map */
