--- a/css/components/sections/ds-logos.scss
+++ b/css/components/sections/ds-logos.scss
@@ -1,17 +1,16 @@
 .logo {
   display: flex;
- flex-direction: column;
+  flex-direction: column;
   justify-content: space-between;
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  background-color:#8d60f0;
+  background-color: #8d60f0;
+
   &__content {
     padding: 2rem;
     width: 100%;
     height: 100%;
   }
-}
 
-  .logo__text {
+  &__text {
     display: flex;
     position: relative;
     font-size: 1.5rem;
@@ -19,34 +18,51 @@
     color: rgba(0, 0, 0, 0.85);
     font-style: normal;
     text-decoration: underline;
-    text-decoration-color:lightgray;
+    text-decoration-color: lightgray;
     text-decoration-thickness: 4px;
-    text-underline-offset:8px
-
+    text-underline-offset: 8px;
   }
-  .logo__svg {
-      // Classe per il contenitore SVG del logo
-      .logo__svg-content {
-        // Classe per il contenuto SVG del logo
-        .logo__svg-content--main {
-         display: flex;
-         justify-content: space-between;
-         align-items: center;
-         img {
-          max-height: 100px;
-         }  
-         svg{
-          max-height:100px;
-          
-          &:last-child{
-            max-width: 500px;
 
-          }
-         }
-          
-            }
+  &__svg {
+    &-content {
+      // Classe per il contenuto SVG del logo
+      &--main {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 1rem;
+
+        img {
+          max-height: 100px;
+          &:hover {
+            transform: scale(1.1);
+            transition: transform 0.5s ease;
+            background-color: #f5f5f5;
+            box-shadow: 11 11 15px rgba(0, 0, 0, 0.3);
+            border-radius: 50%;
+            opacity: 0.9;
           }
         }
+        svg {
+          max-height: 100px;
+
+          &:last-child {
+            max-width: 500px;
+          }
+
+          &:hover {
+            transform: scale(1.3);
+            transition: trasform 1s ease;
+            box-shadow:  rgba(0, 0, 0, 0.3);
+            border: radius 1px;
+            opacity: 0.9;
+
+          }
+        }
+      }
+    }
+  }
+}
 
 // @media screen and (max-width: 1919px) {
 //  main .logo {
