--- a/css/components/shared/dropdown.css
+++ b/css/components/shared/dropdown.css
@@ -5,6 +5,7 @@
   height: 48px;
   display: flex;
   align-items: center;
+  width: -moz-fit-content;
   width: fit-content;
   border-radius: 16px;
   margin: 4px 0;
@@ -32,6 +33,4 @@
 }
 .dropdown:hover .dropdown__content {
   display: flex;
-}
-
-/*# sourceMappingURL=dropdown.css.map */
+}/*# sourceMappingURL=dropdown.css.map */
