--- a/css/components/index.css
+++ b/css/components/index.css
@@ -4,6 +4,8 @@
 @import url(./sections/ds-brandcolor.css);
 @import url(./sections/design-system-components.css);
 @import url(./sections/card-prizes-container.css);
+@import url(./sections/ds-icons/ds-icons.css);
+@import url(./sections/ds-form-fields/ds-form-fields.css);
 
 @import url(./shared/popup.css);
 @import url(./shared/dropdown.css);
