--- a/css/components/shared/dropdown.css
+++ b/css/components/shared/dropdown.css
@@ -1,5 +1,7 @@
 .dropdown {
+  width: -moz-fit-content;
   width: fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 .dropdown .dropbtn {
