--- a/css/components/index.css
+++ b/css/components/index.css
@@ -2,13 +2,14 @@
 @import url(./sections/ds-form-fields.css);
 @import url(./sections/ds-logos.css);
 @import url(./sections/ds-brandcolor.css);
-@import url(./sections/design-system-components.css);
-@import url(./sections/card-prizes-container.css);
+@import url(./sections/design-system-components/design-system-components.css);
+@import url(./sections/card-prizes-container/card-prizes-container.css);
+@import url(./sections/hero-section/hero-section.css);
 
-@import url(./shared/popup.css);
-@import url(./shared/dropdown.css);
-@import url(./shared/card-details.css);
-@import url(./shared/card-prizes.css);
-@import url(./shared/nft-card--lg.css);
-@import url(./shared/phishing-warning.css);
-@import url(./shared/carousel.css);
+@import url(./shared/popup/popup.css);
+@import url(./shared/dropdown/dropdown.css);
+@import url(./shared/card-details/card-details.css);
+@import url(./shared/card-prizes/card-prizes.css);
+@import url(./shared/nft-card--lg/nft-card--lg.css);
+@import url(./shared/phishing-warning/phishing-warning.css);
+@import url(./shared/carousel/carousel.css);
