merge:merged branch hotfix/section-logo-section-brand-color into development

--- a/css/components/sections/design-system-components.css
+++ b/css/components/sections/design-system-components.css
@@ -43,6 +43,4 @@
   font-weight: 500;
   margin-bottom: 10px;
   text-align: center;
-}
-
-/*# sourceMappingURL=design-system-components.css.map */
+}/*# sourceMappingURL=design-system-components.css.map */
