--- a/css/components/shared/design-system-typography/typography.css
+++ b/css/components/shared/design-system-typography/typography.css
@@ -74,6 +74,4 @@
 .container-tipography__font-family {
   font-weight: bold;
   margin: 0;
-}
-
-/*# sourceMappingURL=typography.css.map */
+}/*# sourceMappingURL=typography.css.map */
