--- a/css/components/shared/ds-button-style/button-style.css
+++ b/css/components/shared/ds-button-style/button-style.css
@@ -129,6 +129,4 @@ span {
   border: none;
   background-color: rgb(31, 199, 212);
   color: white;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=button-style.css.map */
