--- a/css/components/sections/design-system-components/design-system-components.scss
+++ b/css/components/sections/design-system-components/design-system-components.scss
@@ -45,4 +45,12 @@
     margin-bottom: 10px;
     text-align: center;
   }
+  &__carousel-container {
+    display: flex;
+    max-width: 1200px;
+    padding: 0 24px;
+    justify-content: center;
+    margin-bottom: 31px;
+    width: 100%;
+  }
 }
