feat:added-second-section

--- a/css/components/index.css
+++ b/css/components/index.css
@@ -14,3 +14,4 @@
 @import url(./shared/nft-card--lg.css);
 @import url(./shared/phishing-warning.css);
 @import url(./shared/carousel.css);
+@import url(./sections/home-2-section.css);
