--- a/css/components/sections/home-2-section.css
+++ b/css/components/sections/home-2-section.css
@@ -1,1 +1,55 @@
-/*# sourceMappingURL=home-2-section.css.map */
+.section-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+}
+.section-2 .logo-and-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+.section-2 .logo-and-text .text-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+.section-2 .logo-and-text .text-box .small-title {
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 10px;
+  color: #280d5f;
+  line-height: 1.1;
+}
+.section-2 .logo-and-text .text-box .paragraph {
+  color: #7a6eaa;
+  font-weight: 400;
+  line-height: 1.5;
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 16px;
+  display: inline;
+}
+.section-2 .logo-and-text .text-box .paragraph-bold {
+  font-size: 16px;
+  text-align: center;
+  color: #7a6eaa;
+  font-weight: bold;
+}
+.section-2 .cards-container {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+.section-2 .font-color-trades,
+.section-2 .svg-color-trades {
+  color: #1fc7d4;
+  fill: #1fc7d4;
+}
+.section-2 .font-color-staked,
+.section-2 .svg-color-staked {
+  color: #ed4b9e;
+  fill: #ed4b9e;
+}/*# sourceMappingURL=home-2-section.css.map */
