feat: navbar html, css, initial media queries

--- a/css/components/index.css
+++ b/css/components/index.css
@@ -16,3 +16,5 @@
 @import url(./shared/carousel.css);
 @import url(./shared/design-system-typography/typography.css);
 @import url(./shared/ds-button-style/button-style.css);
+
+@import url(./shared/navbar/navbar.css);
