feat: home-5 html, css, initial media queries

--- a/css/components/index.css
+++ b/css/components/index.css
@@ -18,3 +18,4 @@
 @import url(./shared/ds-button-style/button-style.css);
 
 @import url(./shared/navbar/navbar.css);
+@import url(./sections/home-section5/home-5.css);
