feat: added crypto section

--- a/css/components/index.css
+++ b/css/components/index.css
@@ -16,3 +16,4 @@
 @import url(./shared/carousel.css);
 @import url(./shared/design-system-typography/typography.css);
 @import url(./shared/ds-button-style/button-style.css);
+@import url(./sections/crypto-section/crypto-section.css);
