feat:added footer

--- a/css/components/index.css
+++ b/css/components/index.css
@@ -15,3 +15,4 @@
 @import url(./shared/phishing-warning.css);
 @import url(./shared/carousel.css);
 @import url(./sections/home-3-section.css);
+@import url(./sections/home-footer.css);
