--- a/css/components/shared/ds-button-style/button-style.css
+++ b/css/components/shared/ds-button-style/button-style.css
@@ -1,8 +1,3 @@
-span {
-  font-weight: bold;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
 .title-button-style {
   margin-left: 25px;
   margin-bottom: 20px;
@@ -34,11 +29,23 @@ span {
 .prima-fila-butt .connect-wallet-button {
   padding-bottom: 10px;
 }
+.prima-fila-butt .connect-wallet-button span {
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 .prima-fila-butt .trade-now-button {
   padding-bottom: 10px;
 }
+.prima-fila-butt .trade-now-button span {
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 .prima-fila-butt .play-button {
   padding-bottom: 10px;
+}
+.prima-fila-butt .play-button span {
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .prima-fila-butt #btn-wallet {
   width: 128px;
@@ -75,6 +82,10 @@ span {
   background-color: rgb(31, 199, 212);
   border-radius: 10px 10px;
   font-weight: 600;
+}
+.prima-fila-butt .buy-tickets-button span {
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .seconda-fila-button .enter-up {
