--- a/css/index.css
+++ b/css/index.css
@@ -1,2 +1,2 @@
-@import url("./template/index.css");
-@import url("./components/index.css");
+@import url(./template/index.css);
+@import url(./components/index.css);
