--- a/css/components/shared/ds-button-style/button-style.scss
+++ b/css/components/shared/ds-button-style/button-style.scss
@@ -1,8 +1,3 @@
-span {
-  font-weight: bold;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
 .title-button-style {
   margin-left: 25px;
   margin-bottom: 20px;
@@ -32,14 +27,26 @@ span {
   flex-direction: column;
   .connect-wallet-button {
     padding-bottom: 10px;
+    span {
+      font-weight: bold;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
   }
 
   .trade-now-button {
     padding-bottom: 10px;
+    span {
+      font-weight: bold;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
   }
 
   .play-button {
     padding-bottom: 10px;
+    span {
+      font-weight: bold;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
   }
 
   #btn-wallet {
@@ -80,6 +87,12 @@ span {
     background-color: rgb(31, 199, 212);
     border-radius: 10px 10px;
     font-weight: 600;
+  }
+  .buy-tickets-button {
+    span {
+      font-weight: bold;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
   }
 }
 
