--- a/css/components/sections/home-3-section/home-3-section.css
+++ b/css/components/sections/home-3-section/home-3-section.css
@@ -4,20 +4,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding: 48px 0;
 }
 .section-3-wrapper {
-  max-width: 100%;
+  max-width: 1200px;
+  padding: 48px 24px;
   height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
-.section-3-item {
+.section-3-wrapper-item {
   display: flex;
+  flex-direction: column;
   margin-top: 2rem;
+  flex: 1 1 0%;
 }
 .section-3 .small-title {
   font-size: 40px;
@@ -28,6 +30,14 @@
 }
 .section-3 .small-title .color-sec {
   color: #7645d9;
+}
+.section-3 .divider {
+  position: absolute;
+  top: 0;
+}
+.section-3 .divider svg {
+  fill: #d8cbed;
+  width: 100%;
 }
 .section-3 .paragraph {
   font-size: 18px;
@@ -76,31 +86,58 @@
 }
 
 .animation-box {
-  height: 428px;
-  width: 428px;
-  display: flex;
   position: relative;
   margin-left: 80px;
+  flex: 1 1 0%;
+  height: 100%;
 }
-.animation-box .btc img {
-  height: auto;
+.animation-box .btc {
   width: 100%;
-}
-.animation-box .animation-layer {
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: 100%;
-  width: 100%;
 }
-.animation-box .btc:nth-child(1) img.animation-box {
+.animation-box .btc:first-child {
+  position: relative;
+}
+.animation-box .btc:first-child img {
   z-index: -2;
 }
-.animation-box .btc:nth-child(2) img.animation-box {
+.animation-box .btc img {
+  height: auto;
+  max-width: 428px;
+}
+.animation-box .btc:nth-child(2) img {
   z-index: 0;
 }
-.animation-box .btc:nth-child(3) img.animation-box {
+.animation-box .btc:nth-child(3) img {
   z-index: 2;
+}
+
+@media screen and (max-width: 851px) {
+  .section-3-wrapper {
+    flex-direction: column;
+  }
+  .section-3-wrapper-item {
+    order: 2;
+  }
+  .section-3-wrapper .animation-box {
+    order: 1;
+    align-self: flex-end;
+    margin-bottom: 24px;
+  }
+  .section-3-wrapper .animation-box .btc img {
+    max-width: 192px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .section-3-wrapper {
+    padding: 24px 16px;
+  }
+}
+@media screen and (max-width: 369px) {
+  .section-3-wrapper {
+    padding: 16px;
+  }
 }/*# sourceMappingURL=home-3-section.css.map */
