--- a/css/components/sections/home-3-section/home-3-section.scss
+++ b/css/components/sections/home-3-section/home-3-section.scss
@@ -4,30 +4,41 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding: 48px 0;
 
   &-wrapper {
-    max-width: 100%;
+    max-width: 1200px;
+    padding: 48px 24px;
     height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    &-item {
+      display: flex;
+      flex-direction: column;
+      margin-top: 2rem;
+      flex: 1 1 0%;
+    }
   }
 
-  &-item {
-    display: flex;
-    margin-top: 2rem;
-  }
   .small-title {
     font-size: 40px;
     color: #280d5f;
     margin-bottom: 0.5rem;
     line-height: 1.1;
-font-weight: 600;
+    font-weight: 600;
     & .color-sec {
       color: #7645d9;
+    }
+  }
+
+  .divider {
+    position: absolute;
+    top: 0;
+    svg {
+      fill: #d8cbed;
+      width: 100%;
     }
   }
 
@@ -74,50 +85,75 @@ font-weight: 600;
     align-items: center;
     box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
 
-    &:hover{
-        opacity: 0.6;
+    &:hover {
+      opacity: 0.6;
     }
   }
 }
 
 .animation-box {
-  height: 428px;
-  width: 428px;
-  display: flex;
   position: relative;
   margin-left: 80px;
+  flex: 1 1 0%;
+  height: 100%;
 
   .btc {
-    img {
-        height: auto;
-        width: 100%;
-    }
-  }
-  .animation-layer {
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-    // pointer-events: none;
-  }
-
-  .btc:nth-child(1) {
-    img.animation-box {
-      z-index: -2;
+    &:first-child {
+      position: relative;
+      img {
+        z-index: -2;
+      }
+    }
+    img {
+      height: auto;
+      max-width: 428px;
     }
   }
 
   .btc:nth-child(2) {
-    img.animation-box {
+    img {
       z-index: 0;
     }
   }
 
   .btc:nth-child(3) {
-    img.animation-box {
+    img {
       z-index: 2;
     }
+  }
+}
+
+@media screen and (max-width: 851px) {
+  .section-3-wrapper {
+    flex-direction: column;
+    &-item {
+      order: 2;
+    }
+    .animation-box {
+      order: 1;
+      align-self: flex-end;
+      margin-bottom: 24px;
+      .btc {
+        img {
+          max-width: 192px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .section-3-wrapper {
+    padding: 24px 16px;
+  }
+}
+@media screen and (max-width: 369px) {
+  .section-3-wrapper {
+    padding: 16px;
   }
 }
