--- a/css/components/sections/prediction-section/prediction-section.css
+++ b/css/components/sections/prediction-section/prediction-section.css
@@ -15,7 +15,178 @@ nav {
   overflow: hidden;
 }
 .prediction-section__top {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.prediction-section__main-container {
   overflow: hidden auto;
+}
+.prediction-section__nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+}
+.prediction-section__utils-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 8px;
+  max-width: 270px;
+}
+.prediction-section__timer {
+  display: flex;
+  background-color: white;
+  padding: 8px 40px 8px 8px;
+  border-radius: 24px;
+  align-items: center;
+  position: relative;
+  margin-right: 24px;
+}
+.prediction-section__timer svg {
+  width: 64px;
+  height: 64px;
+  position: absolute;
+  right: -24px;
+}
+.prediction-section__time-left {
+  font-size: 20px;
+  line-height: 22px;
+  color: #7645d9;
+  font-weight: 600;
+}
+.prediction-section__total-time {
+  font-weight: 400;
+  line-height: 1.5;
+  font-size: 12px;
+  color: #280d5f;
+  padding: 0 8px;
+  max-width: 32px;
+}
+.prediction-section__info-util {
+  background-color: #7a6eaa;
+  max-height: 48px;
+  max-width: 48px;
+  padding: 12px 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  text-decoration: none;
+}
+.prediction-section__info-util svg {
+  fill: white;
+  flex-shrink: 0;
+}
+.prediction-section__info-util:hover {
+  opacity: 0.65;
+}
+.prediction-section__info-util:active {
+  opacity: 0.85;
+  transform: translateY(1px);
+  box-shadow: none;
+}
+.prediction-section__leaderboard-util {
+  background-color: #7a6eaa;
+  max-height: 48px;
+  max-width: 48px;
+  padding: 14px 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
+}
+.prediction-section__leaderboard-util svg {
+  fill: white;
+  flex-shrink: 0;
+}
+.prediction-section__leaderboard-util:hover {
+  opacity: 0.65;
+}
+.prediction-section__leaderboard-util:active {
+  opacity: 0.85;
+  transform: translateY(1px);
+  box-shadow: none;
+}
+.prediction-section__history-util {
+  background-color: #e9eaeb;
+  max-height: 48px;
+  max-width: 48px;
+  padding: 12px 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  border: none;
+  cursor: pointer;
+}
+.prediction-section__history-util svg {
+  fill: white;
+  flex-shrink: 0;
+}
+.prediction-section__coin-container {
+  width: 270px;
+  flex: 0 0 auto;
+}
+.prediction-section__currency-name {
+  background-color: white;
+  border-radius: 24px;
+  padding: 8px 8px 8px 40px;
+  width: fit-content;
+  margin-left: 40px;
+  font-size: 20px;
+  line-height: 22px;
+  font-weight: 600;
+  color: #280d5f;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.prediction-section__currency-name span {
+  font-weight: 400;
+  line-height: 1.5;
+  font-size: 12px;
+  color: #280d5f;
+  padding: 0 16px;
+  max-width: 70px;
+}
+.prediction-section__carousel-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  border-radius: 24px;
+  width: 128px;
+  position: relative;
+}
+.prediction-section__carousel-buttons button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+.prediction-section__button--left, .prediction-section__button--right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 4px;
+}
+.prediction-section__button--left svg, .prediction-section__button--right svg {
+  fill: #1fc7d4;
+  flex-shrink: 0;
+}
+.prediction-section__button--center {
+  position: absolute;
+  left: 50%;
+  margin-left: -32px;
+  top: -17px;
+}
+.prediction-section__button--center svg {
+  display: block;
 }
 .prediction-section__resize-bar {
   position: relative;
@@ -146,6 +317,55 @@ nav {
 .prediction-section__graph {
   height: 100%;
   width: 100%;
+}
+
+.carousel-prediction {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  justify-content: center;
+  transition-duration: 0ms;
+  transform: translate3d(0px, 0px, 0px);
+}
+.carousel-prediction__item {
+  width: 320px;
+  flex-shrink: 0;
+}
+.carousel-prediction__item:first-child .card-prediction__arrow-container--down .card-prediction__multiplier {
+  color: white;
+}
+.carousel-prediction__item:first-child .card-prediction__arrow-container--down .card-prediction__down {
+  color: white;
+}
+.carousel-prediction__item:first-child .card-prediction__arrow-container--down svg {
+  fill: #ed4b9e;
+}
+.carousel-prediction__item:nth-child(2) .card-prediction__arrow-container--up .card-prediction__multiplier {
+  color: white;
+}
+.carousel-prediction__item:nth-child(2) .card-prediction__arrow-container--up .card-prediction__up {
+  color: white;
+}
+.carousel-prediction__item:nth-child(2) .card-prediction__arrow-container--up svg {
+  fill: #31d0aa;
+}
+.carousel-prediction__item:nth-child(3) .card-prediction__arrow-container--up .card-prediction__multiplier {
+  color: white;
+}
+.carousel-prediction__item:nth-child(3) .card-prediction__arrow-container--up .card-prediction__up {
+  color: white;
+}
+.carousel-prediction__item:nth-child(3) .card-prediction__arrow-container--up svg {
+  fill: #31d0aa;
+}
+.carousel-prediction__item:nth-child(4) .card-prediction__arrow-container--up .card-prediction__multiplier {
+  color: white;
+}
+.carousel-prediction__item:nth-child(4) .card-prediction__arrow-container--up .card-prediction__up {
+  color: white;
+}
+.carousel-prediction__item:nth-child(4) .card-prediction__arrow-container--up svg {
+  fill: #31d0aa;
 }
 
 /*# sourceMappingURL=prediction-section.css.map */
