feat: navbar html and scss

--- a/css/components/index.css
+++ b/css/components/index.css
@@ -22,3 +22,4 @@
 @import url(./shared/ds-button-style/button-style.css);
 @import url(./shared/scrollbar/scrollbar.css);
 @import url(./shared/home-sixth-section/home-sixth-section.css);
+@import url(./shared/navbar/navbar.css);
