feat: popup wallet js progress

--- a/css/components/index.css
+++ b/css/components/index.css
@@ -24,3 +24,4 @@
 @import url(./shared/home-sixth-section/home-sixth-section.css);
 @import url(./shared/navbar/navbar.css);
 @import url(./sections/home-5-section/home-5-section.css);
+@import url(./shared/popup-wallet/popup-wallet.css);
