--- a/css/components/sections/home-2-section/home-2-section.scss
+++ b/css/components/sections/home-2-section/home-2-section.scss
@@ -2,27 +2,44 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px;
+  padding: 48px 0;
   background: linear-gradient(180deg, #fff 22%, #d7caec 100%);
-
+  &__wrapper {
+    max-width: 1200px;
+    display: flex;
+    width: 100%;
+    padding: 48px 24px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .logo-p-bunny {
+    img {
+      display: block;
+    }
+  }
   .logo-and-text {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 24px;
+    width: 100%;
 
     .text-box {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 10px;
 
       .small-title {
+        display: flex;
+        flex-direction: column;
         font-size: 40px;
+        font-weight: 600;
         text-align: center;
-        margin-bottom: 10px;
         color: #280d5f;
         line-height: 1.1;
+        &--bottom {
+          margin-bottom: 32px;
+        }
       }
 
       .paragraph {
@@ -39,27 +56,66 @@
         font-size: 16px;
         text-align: center;
         color: #7a6eaa;
-        font-weight: bold;
+        font-weight: 600;
+        margin-bottom: 16px;
       }
     }
   }
 
   .cards-container {
     display: flex;
-    gap: 20px;
-    margin-top: 20px;
+    gap: 19px;
+    margin-top: 17px;
+    position: relative;
+    z-index: 0;
+    max-width: 878px;
+    width: 100%;
   }
   & {
     .font-color-trades,
     .svg-color-trades {
-      color: #1fc7d4;
+      color: #1fc7d4 !important;
       fill: #1fc7d4;
     }
 
     .font-color-staked,
     .svg-color-staked {
-      color: #ed4b9e;
+      color: #ed4b9e !important ;
       fill: #ed4b9e;
+    }
+  }
+}
+
+@media screen and (max-width: 967px) {
+  .section-2 {
+    &__wrapper {
+      padding: 32px 24px;
+    }
+    .logo-and-text {
+      .text-box {
+        .small-title {
+          font-size: 32px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 851px) {
+  .section-2 {
+    .cards-container {
+      flex-direction: column;
+      max-width: 100%;
+      width: unset;
+      gap: 24px;
+    }
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .section-2 {
+    &__wrapper {
+      padding: 16px 24px;
     }
   }
 }
