--- a/css/components/shared/nav-bottom/nav-bottom.css
+++ b/css/components/shared/nav-bottom/nav-bottom.css
@@ -3,6 +3,7 @@ body {
 }
 
 .nav-bottom {
+  padding-top: 1px;
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -11,12 +12,12 @@ body {
   position: relative;
 }
 .nav-bottom__item {
-  line-height: 38px;
+  line-height: 42px;
   font-size: 16px;
   font-weight: 400;
   color: #7a6eaa;
   text-decoration: none;
-  padding: 4px 4px 0 4px;
+  padding: 0px 4px 0 4px;
 }
 .nav-bottom__item:hover {
   background-color: #eff4f5;
