--- a/css/components/shared/nav-bottom/nav-bottom.scss
+++ b/css/components/shared/nav-bottom/nav-bottom.scss
@@ -2,6 +2,7 @@ body {
   background-color: #faf9fa;
 }
 .nav-bottom {
+  padding-top: 1px;
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -11,12 +12,12 @@ body {
   // margin-top: 127px; da aggiungere quando nav e warning sono in fixed
 
   &__item {
-    line-height: 38px;
+    line-height: 42px;
     font-size: 16px;
     font-weight: 400;
     color: #7a6eaa;
     text-decoration: none;
-    padding: 4px 4px 0 4px;
+    padding: 0px 4px 0 4px;
     &:hover {
       background-color: #eff4f5;
     }
